# awg-easy-rs

./: .dockerignore  .gitignore  ANALYSIS.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  clippy.toml  deny.toml  docker-compose.yml  rust-toolchain.toml
.github/workflows/: build-release.yml
docs/: INSTALL.md
packaging/: awg-easy-rs.service
scripts/: build.sh  install.sh  migrate-pre2.sh  vendor-proxy.sh
src/: auth.rs  config.rs  datetime.rs  db.rs  firewall.rs  init_setup.rs  lib.rs  main.rs  memexec.rs  proc.rs  qr.rs  rng.rs
src/api/: admin.rs  clients.rs  dns.rs  mdnsvpn.rs  mod.rs  mtproxy.rs  proxy.rs  routes.rs  session.rs  setup.rs  xray.rs
src/dns/: dnscrypt.rs  mod.rs  runtime.rs  supervisor.rs  tor.rs
src/mdnsvpn/: config.rs  keys.rs  mod.rs  runtime.rs  share.rs  supervisor.rs
src/mtproxy/: client.rs  config.rs  mod.rs  runtime.rs  supervisor.rs
src/proxy/: VENDOR.md  config.rs  mod.rs  proxy.rs  responder.rs  session.rs  supervisor.rs  transform.rs
src/proxy/patches/: 0001-deconstant-dns-sip-fingerprints.patch  README.md
src/wg/: cli.rs  config_gen.rs  kernel.rs  mod.rs  params.rs
src/xray/: config_gen.rs  keys.rs  mod.rs  probe.rs  runtime.rs  share.rs  supervisor.rs
static/: app.js  index.html
tests/: api_auth.rs  api_security.rs  auth.rs  config.rs  db.rs  init_setup.rs  mdnsvpn_api.rs  mdnsvpn_config_smoke.rs  mtproxy_config_smoke.rs  xray_api.rs
tests/common/: mod.rs
