[package]
name = "awg-easy-rs"
version = "0.1.0"
edition = "2021"
description = "Standalone AmneziaWG VPN manager with Web UI - pure Rust rewrite of awg-easy"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "auth"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"

# QR codes
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Networking
ipnet = "2"

# TOTP 2FA
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# UUID for one-time links
uuid = { version = "1", features = ["v4"] }

# Gzip decoder for the bundled Xray ELF (vendor/xray-linux-*.gz).
# `rust_backend` keeps us off zlib-sys so the build stays self-contained.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# TLS client for the Reality `dest` probe — opens a real TLS 1.3
# handshake against the candidate site so we can reject duds before
# they get baked into a config. Pure-Rust to keep the build self-
# contained.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
webpki-roots = "0.26"
x509-parser = "0.16"

# SIGHUP/SIGTERM to the supervised Xray child. tokio::process only
# offers SIGKILL natively; we need finer-grained signalling for
# reload-without-restart and graceful shutdown.
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

[dev-dependencies]
serial_test = { version = "3", features = ["async"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

# URL encoding for TOTP URI
url = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
strip = true        # Strip symbols
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
