[package]
name = "awg-easy-rs"
version = "0.1.0"
edition = "2021"
description = "Standalone AmneziaWG VPN manager with Web UI - pure Rust rewrite of awg-easy"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "auth"] }

# Database. `backup` enables the SQLite online-backup API used by the
# in-memory mode to snapshot the RAM database to a durable file and to
# restore it on boot, without ever blocking the request path.
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"

# QR codes
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Networking
ipnet = "2"

# TOTP 2FA
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# UUID for one-time links
uuid = { version = "1", features = ["v4"] }

# Gzip decoder for the bundled Xray ELF (vendor/xray-linux-*.gz).
# `rust_backend` keeps us off zlib-sys so the build stays self-contained.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# TLS client for the Reality `dest` probe — opens a real TLS 1.3
# handshake against the candidate site so we can reject duds before
# they get baked into a config. Pure-Rust to keep the build self-
# contained.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
webpki-roots = "0.26"
x509-parser = "0.16"

# SIGHUP/SIGTERM to the supervised Xray child. tokio::process only
# offers SIGKILL natively; we need finer-grained signalling for
# reload-without-restart and graceful shutdown.
libc = "0.2"

# --- In-process DPI-imitation proxy (src/proxy/) ---
# The AmneziaWG-fronting UDP proxy that makes the tunnel look like
# QUIC/DNS/STUN/SIP to DPI. Ported in-process from wiresock/amneziawg-proxy
# — these are its transitive dependencies.
bytes = "1"
# Concurrent per-client session/metrics maps on the data path — lock-free
# in steady state (see src/proxy/session.rs, src/proxy/metrics.rs).
dashmap = "6"
# SO_RCVBUF/SO_SNDBUF sizing on the frontend + per-session backend sockets.
socket2 = "0.6"
# Stateful QUIC/TLS-1.3 handshake responder for QUIC-mode probes
# (src/proxy/quic_handshake.rs). Pairs with rcgen for the self-signed
# per-SNI server certificate.
quinn-proto = "0.11"
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
# TOML parse for the proxy's own ProxyConfig (kept so the ported config
# tests compile; runtime config is built from the DB, not a file).
toml = "0.8"
# Typed error enum for the proxy modules (src/proxy/errors.rs).
thiserror = "1"

# Logging.
# `release_max_level_info` statically compiles out trace!/debug! callsites in
# release builds. The proxy data path logs per-packet at debug; without this a
# stray RUST_LOG=debug in production would collapse throughput, and each
# callsite otherwise costs an atomic level check per datagram. Debug builds
# keep full verbosity.
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

[dev-dependencies]
serial_test = { version = "3", features = ["async"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

# URL encoding for TOTP URI
url = "2"

# Ported proxy test modules (src/proxy/*.rs #[cfg(test)]): temp dirs for
# config-file round-trips, and tokio's paused-clock test harness for the
# session-TTL / cleanup-sweep timing tests.
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
strip = true        # Strip symbols
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
